Add web application, stage changes

--- a/Students.Domain/Students.Web/Students.Web.csproj
+++ b/Students.Domain/Students.Web/Students.Web.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>33161732-3685-4a34-9412-8268514f0c5b</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Students.Data\Students.Data.csproj" />
     <ProjectReference Include="..\Students.Domain\Students.Domain.csproj" />
   </ItemGroup>
 
